# Patterns

Patterns/: CMakeLists.txt
Patterns/Patterns/: CMakeLists.txt  Patterns.cpp
Patterns/Patterns/PIMPL/BackPimpl/: simplePimple.cpp  simplePimple.h
Patterns/Patterns/PIMPL/MovCopyPIMPL/: spimp.h
Patterns/Patterns/PIMPL/ProxyPimpl/: ProxyPimpl.cpp  ProxyPimpl.h  ProxyPimplMain.cpp  ProxyPimplMain.h  pimpl_h.h  pimpl_impl.h
